Moved footer inside container div and finished rough draft on mobile. corrected footer on mobile and desktop view

--- a/css/index.css
+++ b/css/index.css
@@ -215,7 +215,7 @@ header .logo {
 footer {
 	align-self: flex-end;
 	margin: -10px 0px 0px 0px;
-	padding: 0px 0 0px 0;
+	padding: 52px 0 0px 174px;
 	display:flex;
 	justify-content: center;
 	height: 70px;
@@ -537,10 +537,10 @@ input[type=submit]:hover {
     }
     
     /* Footer Styles */
-    footer {
+    .foot {
         align-self: flex-end;
         margin: -10px 0px 0px 0px;
-        padding: 0px 0 0px 0;
+        padding: 50px 0px 0px 111px;
         display:flex;
         justify-content: center;
         height: 70px;
@@ -550,7 +550,7 @@ input[type=submit]:hover {
 
     }
 
-    @media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {
         .container {
             width: 100%;
             margin: auto;
@@ -754,7 +754,7 @@ input[type=submit]:hover {
         }
         
         /* Footer Styles */
-        footer {
+        .foot {
             align-self: flex-end;
             margin: 0px 135px 0px 0px;
             padding: 0px 0 0px 0;
@@ -765,5 +765,5 @@ input[type=submit]:hover {
         
         
     
-        }
+    }
     
